Still fixing the new overflow bug

--- a/_sass/_generic/_body.scss
+++ b/_sass/_generic/_body.scss
@@ -1,13 +1,19 @@
 * { box-sizing: border-box; }
 
 body {
+  width: 100vw;
+  max-width: 100vw;
+
+  overflow-x: hidden;
+}
+
+body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
 
   background-color: color(mono, white);
 
-  overflow-x: hidden;
   transition-duration: 0s;
 }
 
